Added new-post.html href link to index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
         <header>
             <h1>Dynamic Multipage Blog</h1>
+            <a href="new-post.html">Create post</a>
         </header>
             <main>
                 <section id="blog-posts">
                     <h2>Blog Posts</h2>
-                    <ul id="post-list">
+                    <ul 
+                    id="post-list">
 
                     </ul>
                 </section>
