--- a/new-post.html
+++ b/new-post.html
@@ -11,10 +11,16 @@
     <h1>Create post</h1>
     <form id="newPostForm">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br><br>
+        <input type="text" id="title" name="title" required>
+        <br><br>
 
         <label for="content">Content:</label>
-        <textarea name="content" id="content" required></textarea><br><br>
+        <textarea name="content" id="content" required></textarea>
+        <br><br>
+
+        <label for="image">Image (Optional):</label>
+        <input type="file" id="image" name="image" accept="image/*">
+        <br><br>
 
         <button type="submit">Save Post</button>
     </form>
