--- a/new-post.html
+++ b/new-post.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Post</title>
     <link rel="stylesheet" href="style.css">
-    <script src="new-post.js"></script>
+    <script src="new-post.js" defer></script>
 </head>
 <body>
     <h1>Create post</h1>
