--- a/new-post.html
+++ b/new-post.html
@@ -8,21 +8,26 @@
     <script src="new-post.js" defer></script>
 </head>
 <body>
+    <header>
     <h1>Create post</h1>
-    <form id="newPostForm">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
-        <br><br>
+    </header>
+         <form id="newPostForm">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required>
+            <br><br>
 
-        <label for="content">Content:</label>
-        <textarea name="content" id="content" required></textarea>
-        <br><br>
+             <label for="content">Content:</label>
+            <textarea name="content" id="content" required></textarea>
+            <br><br>
 
-        <label for="image">Image (Optional):</label>
-        <input type="file" id="image" name="image" accept="image/*">
-        <br><br>
+            <label for="image">Image (Optional):</label>
+            <input type="file" id="image" name="image" accept="image/*">
+            <br><br>
 
-        <button type="submit">Save Post</button>
-    </form>
+            <button type="submit">Save Post</button>
+        </form>
+    <footer>
+        <p>&copy; 2025 Dynamic Blog</p>
+    </footer>
 </body>
 </html>
