Added save button to post.html

--- a/post.html
+++ b/post.html
@@ -16,6 +16,7 @@
             <h2 id="post-title"></h2>
             <p id="post-content"></p>
             <button id="edit-btn">Edit a Post</button>
+            <button id="save-btn" style="display: none;">Save Changes</button>
         </div>
     </main>
     <footer>
