Added delete button for post.html

--- a/post.html
+++ b/post.html
@@ -17,6 +17,7 @@
             <p id="post-content"></p>
             <button id="edit-btn">Edit a Post</button>
             <button id="save-btn" style="display: none;">Save Changes</button>
+            <button id="delete-btn">Delete Post</button>
         </div>
     </main>
     <footer>
